<resources>
    <string name="app_name">Story App</string>
    <string name="title_login_page">Login</string>
    <string name="message_login_page">Please fill your data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="title_register_page">Register</string>
    <string name="title_welcome_page">Story App</string>
    <string name="message_welcome_page">Welcome to Story App!</string>
    <string name="no_story_found">No stories found</string>
    <string name="story_name">Story name</string>
    <string name="story_description">Description</string>
    <string name="event_name">event name</string>
    <string name="camera">Camera</string>
    <string name="camera_x">CameraX</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">No image chosen</string>
    <string name="detail_story">Detail</string>
    <string name="new_story">New Story</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="title_logout_page">Logout</string>
    <string name="message_logout_page">Are you sure you want to logout?</string>
    <string name="fill_email">Enter your email</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="fill_name">Enter your name</string>
    <string name="fill_password">Enter your password</string>
    <string name="success">Success</string>
    <string name="account_created_message">Account with %1$s has been created. Please login to start.</string>
    <string name="password_setting">Password must contain at least 8 character</string>
    <string name="user_is_not_logged_in">User is not logged in</string>
    <string name="user_session_not_found">User session not found</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="failed_load_camera">Failed to load camera</string>
    <string name="failed_take_photo">Failed to take photo</string>
    <string name="story">StoryApp</string>
    <string name="retry">Retry</string>
    <string name="location_not_available">Location not available</string>
    <string name="location_error">Location error</string>
    <string name="story_uploaded">Story uploaded.</string>
    <string name="empty_description_warning">Enter the description</string>
    <string name="add_location">Add Location</string>
</resources>